# chess-practice

./: .gitignore  CMakeLists.txt  conf.ps1  conf.sh
proto/: helloworld.proto
scripts/: bootstrap.ps1  bootstrap.sh
src/: chess.hpp  client.hpp  environment.hpp  main.cpp  server.hpp  utility.cpp  utility.hpp
src/chess/: board.hpp  game.hpp  operation.hpp
